2.20.0 (2024-11-17)
-----------------------------
* General
  - [New]Implemented track & pace notes system, which allows load & save track & pace notes files.
  - Add "pace_notes_path" & "track_notes_path" options to global user config file.
  - Add new ".TPPN" (TinyPedal Pace Notes) & ".TPTN" (TinyPedal Track Notes) file formats.
  - Add support for load & save GPL pace notes ".ini" file format.
    Special thanks to "Lee Bowden" (author of GPL pace notes system & file format) and "Jim Pearson"
    for providing technical assistance.
  - Add "multimedia_plugin_on_windows" option in Compatibility dialog, which sets multimedia plugin
    for playing sound file on windows.

* [New]Pace Notes Playback Tab
  - Add "Pace Notes Playback" control panel that can be accessed from "Pace Notes" tab in main window.
    This control panel provides pace notes sound playback control and configuration.
  - Click "Enabled Playback" or "Disabled Playback" button to quickly enable or disable pace notes playback.
    Note, "Notes Module" must be enabled to allow pace notes playback.
    Disabling this option does not affect "Notes Module" or "Pace notes Widget".
  - By default, pace notes file is automatically loaded from "pace_notes_path" if a file that
    matches current track name is found.
    Enable "Manually Select Pace Notes File" check box to disable auto-file-name matching,
    and manually select a pace notes file that can be played on any track.
    This option takes immediate effect when changed.
  - "Sound file path" sets path for loading pace notes sound files that matches value from
    "pace note" column found in pace notes file. If no sound file found, sound won't be played.
    This option takes immediate effect when changed.
  - "Sound format" sets sound format for loading sound file.
    This option only takes effect after clicked any "Set" button.
  - "Global offset" adds global position offset (in meters) to current vehicle position on track,