@@ -1115,6 +1115,7 @@ WIDGET_DEFAULT = {
         "font_color_pace_notes": "#FFFFFF",
         "bkg_color_pace_notes": "#66111111",
         "show_comments": False,
+        "enable_comments_line_break": True,
         "comments_width": 30,
         "comments_text_alignment": "Center",
         "font_color_comments": "#FFFFFF",
@@ -1961,6 +1962,7 @@ WIDGET_DEFAULT = {
         "font_color_track_notes": "#FFFFFF",
         "bkg_color_track_notes": "#66111111",
         "show_comments": False,
+        "enable_comments_line_break": True,
         "comments_width": 30,
         "comments_text_alignment": "Center",
         "font_color_comments": "#FFFFFF",
